[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "twitch_fetchchat"
version = "0.1.0"
description = "send Twitch chat to mqtt or raw udp target"
authors = [
    { email="w531t4@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "irc>=20,<21",
    "appdaemon>=4.0.0"
]