# SPDX-FileCopyrightText: 2025 Aaron White <w531t4@gmail.com>
# SPDX-License-Identifier: MIT
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "twitch_fetchchat"
version = "0.2.0"
description = "send Twitch chat to mqtt or raw udp target"
authors = [
    { email="w531t4@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "irc>=20,<21",
    "appdaemon>=4.0.0"
]

[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
commit_message = "chore(release): {version} [skip ci]"
changelog_file = "CHANGELOG.md"
build_command = "pip install build && python -m build"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "feat",
    "feature",
    "fix",
    "perf",
    "chore",
    "docs",
    "style",
    "refactor",
    "test",
    "build",
    "ci",
    "revert",
]
minor_tags = ["feat", "feature"]
patch_tags = ["fix", "perf"]
